--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,17 +1,17 @@
 steps:
   # Step 1: Build the Docker image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/my-todo-app', '-f', 'Dockerfile', 'my-todo-app']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID', '-f', 'Dockerfile', 'my-todo-app']
 
   # Step 2: Push the Docker image to Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/my-todo-app']
+    args: ['push', 'gcr.io/$PROJECT_ID']
 
   # Step 3: Deploy the Docker image to Cloud Run
   - name: 'gcr.io/cloud-builders/gcloud'
     args: [
       'run', 'deploy', 'my-todo-service',
-      '--image', 'gcr.io/$PROJECT_ID/my-todo-app',
+      '--image', 'gcr.io/$PROJECT_ID',
       '--region', 'europe-west1',
       '--platform', 'managed',
       '--allow-unauthenticated',
@@ -20,4 +20,4 @@ steps:
 
 # Specify the images to be pushed
 images:
-  - 'gcr.io/$PROJECT_ID/my-todo-app'
+  - 'gcr.io/$PROJECT_ID'
