--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,9 +1,9 @@
 steps:
   # Step 1: Build the Docker image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID', '-f', 'Dockerfile', '.']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/my-todo-app', '-f', 'Dockerfile', '.']
 
-  # Step 2: Push the Docker image to Artifact Registry
+  # Step 2: Push the Docker image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/$PROJECT_ID/my-todo-app']
 
@@ -11,7 +11,7 @@ steps:
   - name: 'gcr.io/cloud-builders/gcloud'
     args: [
       'run', 'deploy', 'my-todo-service',
-      '--image', 'gcr.io/$PROJECT_ID',
+      '--image', 'gcr.io/$PROJECT_ID/my-todo-app',
       '--region', 'europe-west1',
       '--platform', 'managed',
       '--allow-unauthenticated',
@@ -20,4 +20,4 @@ steps:
 
 # Specify the images to be pushed
 images:
-  - 'gcr.io/$PROJECT_ID'
+  - 'gcr.io/$PROJECT_ID/my-todo-app'
